--- a/resources.html
+++ b/resources.html
@@ -31,7 +31,7 @@
 
       <div class="resources-list">
         <div class="resource">
-          <h3>📘 Grade 12 Study Guide</h3>
+          <h3>📘 Semester 1 Study Guide</h3>
           <p>Comprehensive revision booklet for final exams.</p>
           <a href="#">Download PDF</a>
         </div>
