--- a/booking.html
+++ b/booking.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Book Room | SmartCampus</title>
+  <title>Book Room | Campus Connect</title>
   <link rel="stylesheet" href="Campus-Connect-app/smart-campus-app/css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a2c5c2c6b1.js" crossorigin="anonymous"></script>
